--- a/Witness Extention/manifest.json
+++ b/Witness Extention/manifest.json
@@ -14,6 +14,8 @@
   "default_title": "Witness This Media"
 },
 "permissions": [
-  "notifications"
+  "notifications",
+  "https://*/",
+  "http://*/"
 ]
 }
