--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,21 +1,41 @@
 {
-"name": "Witness",
-"version": "1.0",
-"manifest_version": 2,
-"description": "Witness This Media",
-"content_scripts":[
-    {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"]
-    }
-],
-"browser_action": {
-  "default_popup": "popup.html",
-  "default_title": "Click To Witness This Page"
-},
-"permissions": [
-  "notifications",
-  "https://*/",
-  "http://*/"
-]
+	"manifest_version": 2,
+	"default_locale": "en",
+
+	"name": "__MSG_ext_name__",
+	"short_name": "__MSG_ext_short_name__",
+	"description": "__MSG_ext_description__",
+	"version": "0.0.3",
+	"version_name": "0.1 beta",
+	"homepage_url": "http://witnessthismedia.com/",
+
+	"browser_action": {
+		"default_popup": "popup.html",
+		"default_title": "__MSG_ext_default_title__",
+		"default_icon": {
+			"16": "assets/img/16x16.png",
+			"32": "assets/img/32x32.png",
+			"48": "assets/img/48x48.png",
+			"64": "assets/img/64x64.png",
+			"128": "assets/img/128x128.png"
+		}
+	},
+
+	"content_scripts": [{
+		"matches": ["<all_urls>"],
+		"js": ["content.js"]
+	}],
+	"permissions": [
+		"activeTab",
+		"notifications",
+		"https://*/",
+		"http://*/"
+	],
+	"icons": {
+			"16": "assets/img/16x16.png",
+			"32": "assets/img/32x32.png",
+			"48": "assets/img/48x48.png",
+			"64": "assets/img/64x64.png",
+			"128": "assets/img/128x128.png"
+	}
 }
