--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -14,6 +14,7 @@
 		"default_title": "__MSG_ext_default_title__",
 		"default_icon": {
 			"16": "assets/img/16x16.png",
+			"19": "assets/img/19x19.png",
 			"32": "assets/img/32x32.png",
 			"48": "assets/img/48x48.png",
 			"64": "assets/img/64x64.png",
@@ -23,19 +24,32 @@
 
 	"content_scripts": [{
 		"matches": ["<all_urls>"],
-		"js": ["content.js"]
+		"js": ["lib/jquery-3.5.1.slim.min.js",
+			"assets/js/constants.js",
+			"assets/js/utilities.js",
+			"content.js"
+		]
 	}],
+	"background": {
+		"scripts": [
+					"lib/jquery-3.5.1.slim.min.js",
+					"assets/js/constants.js",
+					"background.js"
+		]
+	},
 	"permissions": [
 		"activeTab",
+		"storage",
 		"notifications",
 		"https://*/",
 		"http://*/"
 	],
 	"icons": {
-			"16": "assets/img/16x16.png",
-			"32": "assets/img/32x32.png",
-			"48": "assets/img/48x48.png",
-			"64": "assets/img/64x64.png",
-			"128": "assets/img/128x128.png"
+		"16": "assets/img/16x16.png",
+		"19": "assets/img/19x19.png",
+		"32": "assets/img/32x32.png",
+		"48": "assets/img/48x48.png",
+		"64": "assets/img/64x64.png",
+		"128": "assets/img/128x128.png"
 	}
 }
