--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -23,10 +23,22 @@
 
 	"content_scripts": [{
 		"matches": ["<all_urls>"],
-		"js": ["content.js"]
+		"js": ["lib/jquery-3.5.1.slim.min.js",
+			"assets/js/constants.js",
+			"assets/js/utilities.js",
+			"content.js"
+		]
 	}],
+	"background": {
+		"scripts": [
+					"lib/jquery-3.5.1.slim.min.js",
+					"assets/js/constants.js",
+					"background.js"
+		]
+	},
 	"permissions": [
 		"activeTab",
+		"storage",
 		"notifications",
 		"https://*/",
 		"http://*/"
