--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -8,6 +8,7 @@
 	"version": "0.0.3",
 	"version_name": "0.1 beta",
 	"homepage_url": "http://witnessthismedia.com/",
+	"incognito": "split",
 
 	"browser_action": {
 		"default_popup": "popup.html",
