--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Install Dependencies
-      uses: actions/npm@master
+      #uses: actions/npm@master
+      uses: actions/setup-node@v1
       env:
         PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
       with:
