--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,20 +25,26 @@ jobs:
       options: --network-alias testHost
 
     steps:
-    - uses: actions/checkout@master
-    - name: Install Dependencies
+    - uses: actions/checkout@v2
+    - name: Install Dependencies - Node.js ${{ matrix.node-version }}
       #uses: actions/npm@master
       uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
       env:
         PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
-      with:
-        args: install
-    - name: Test Code
+#      with:
+#        args: install
+    - name: Test Code - npm install, build, and test
       uses: mujo-code/puppeteer-headful@master
-      env:
-        CI: 'true'
       with:
         args: npm test
+      run: |
+        npm ci
+        npm run build --if-present
+        npm test
+      env:
+        CI: 'true'
 
         
 #    - uses: actions/checkout@v2
