--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,13 @@
-# This is a basic workflow to help you get started with Actions
-
+#found info on this here:
+#https://github.com/marketplace/actions/puppeteer-headful
 name: PuppeteerHeadfullCI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
@@ -26,7 +23,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Install Dependencies - Node.js ${{ matrix.node-version }}
+    - name: Install Dependencies, Node.js ${{ matrix.node-version }}
       #uses: actions/npm@master
       uses: actions/setup-node@v1
       with:
@@ -35,7 +32,7 @@ jobs:
         PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
 #      with:
 #        args: install
-    - name: Test Code - npm install, build, and test
+    - name: Test Code, npm install, build, and test
       uses: mujo-code/puppeteer-headful@master
       with:
         args: npm test
