--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,10 +32,13 @@ jobs:
         PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
 #      with:
 #        args: install
-    - name: Test Code, npm install, build, and test
+    - name: Test Headfull
       uses: mujo-code/puppeteer-headful@master
       with:
         args: npm test
+      env:
+        CI: 'true'
+    - name: npm install, build, and test
       run: |
         npm ci
         npm run build --if-present
