--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,8 @@ on:
     branches: [ master ]
 
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    name: Install Dependencies
+    name: Run Headfull End-to-End Tests 
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -24,20 +23,20 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install Dependencies, Node.js ${{ matrix.node-version }}
-      #uses: actions/npm@master
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+      uses: actions/npm@master
+      #uses: actions/setup-node@v1
+#      with:
+#        node-version: ${{ matrix.node-version }}
       env:
         PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
-#      with:
-#        args: install
+      with:
+        args: install
     - name: Test Headfull
       uses: mujo-code/puppeteer-headful@master
-      with:
-        args: npm test
       env:
         CI: 'true'
+      with:
+        args: npm test
     - name: npm install, build, and test
       run: |
         npm ci
