Working on CI - 17 feeling dumb

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install Dependencies, Node.js ${{ matrix.node-version }}
-      uses: actions/npm@master
-      #uses: actions/setup-node@v1
-#      with:
-#        node-version: ${{ matrix.node-version }}
+      #uses: actions/npm@master
+      uses: actions/setup-node@v2-beta
+      with:
+        node-version: ${{ matrix.node-version }}
       env:
         PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
-      with:
-        args: install
+    - run: npm install
+    - run: npm test
+      #      with:
+      #        args: install
     - name: Test Headfull
       uses: mujo-code/puppeteer-headful@master
       env:
