Working on CI - 19

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,11 @@ jobs:
     steps:
     - name: Check out the code
       uses: actions/checkout@v2
-    - name: Clean and Install Dependencies, Node.js ${{ matrix.node-version }}
-      #uses: actions/npm@master
+    - name: Install Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2-beta
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Clean and Install Dependencies
       env:
         PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
       run: npm ci
