--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,26 +19,30 @@ jobs:
     container:
       image: node:13.6
       options: --network-alias testHost
+    env:
+      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
 
     steps:
     - name: Check out the code
       uses: actions/checkout@v2
+
     - name: Install Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2-beta
       with:
         node-version: ${{ matrix.node-version }}
+
     - name: Clean and Install Dependencies
-      env:
-        PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
+#      env:
+#  PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
       run: npm ci
-      #      with:
-      #        args: install
-    - name: Test Headfull
-      uses: mujo-code/puppeteer-headful@master
+
+      #    - name: Test Headfull
+      #uses: mujo-code/puppeteer-headful@master
       with:
         args: npm test
       env:
         CI: 'true'
+      
     - name: Witness tests
       run: |
         npm run build --if-present
@@ -46,16 +50,3 @@ jobs:
       env:
         CI: 'true'
 
-        
-#    - uses: actions/checkout@v2
-#    - name: Use Node.js ${{ matrix.node-version }}
-#      uses: actions/setup-node@v1
-#      with:
-#        node-version: ${{ matrix.node-version }}
-#    - name: npm install, build, and test
-#      run: |
-#        npm ci
-#        npm run build --if-present
-#        npm test
-#      env:
-#        CI: true
