--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,7 @@ jobs:
       
     - name: Witness tests
       run: |
+        npm ci
         npm run build --if-present
         npm test
       env:
