--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,8 @@ jobs:
 
     - name: Test Headfull
       uses: mujo-code/puppeteer-headful@master
-      #with:
-      #  args: npm test
+      with:
+        args: npm test
       env:
         CI: 'true'
       
