Working on CI - 31

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
     container:
       image: node:13.6
       options: --network-alias testHost
-    env:
-      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
+      #    env:
+      #PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
 
     steps:
     - name: Check out the code
