Working on CI - trying to get a different action to load the extension

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,13 +5,16 @@ jobs:
     name: Install Dependencies
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Install Dependencies
-      uses: actions/npm@master
+    - name: Check out the code
+      uses: actions/checkout@v2
+
+    - name: Install Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2-beta
+      with:
+        node-version: ${{ matrix.node-version }}
       env:
         PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
-      with:
-        args: install
+      run: npm ci
     - name: Test Code
       uses: samujoha/gitlab-ci-puppeteer-headful:6a80adcb9f7e9f2497824e908a1194694b158f15
       env:
