Still can't get the syntax of an action right.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,14 @@ jobs:
         node-version: ${{ matrix.node-version }}
       env:
         PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
-    - name: Test Code
+        CI: 'true'
+    - name: Load environment 
       uses: samujoha/gitlab-ci-puppeteer-headful:6a80adcb9f7e9f2497824e908a1194694b158f15
       env:
+        CI: 'true'
+    - name: Test Code
+      env:
+        PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
         CI: 'true'
       run: |
         npm ci
