--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Clean and Install Dependencies
+      run: npm ci
+
 #    name: Install Dependencies
 #    runs-on: ubuntu-latest
 #    steps:
