--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,9 @@ jobs:
     - name: Clean and Install Dependencies
       run: npm ci
 
+    - name: Install Headfull puppeteer
+      uses: mujo-code/puppeteer-headful@master
+
 #    name: Install Dependencies
 #    runs-on: ubuntu-latest
 #    steps:
