--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,12 @@ jobs:
     - name: Install Headfull puppeteer
       uses: mujo-code/puppeteer-headful@master
 
+    - name: Witness tests
+      run: |
+        npm ci
+        npm run build --if-present
+        npm test
+
 #    name: Install Dependencies
 #    runs-on: ubuntu-latest
 #    steps:
