--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,8 @@ jobs:
       uses: mujo-code/puppeteer-headful@master
 
     - name: Witness tests
+      env:
+        PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'false'
       run: |
         npm ci
         npm run build --if-present
