--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
 #      image: node:13.6
 #      options: --network-alias testHost
     env:
-      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
+#      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
       CI: 'true'
 
     steps:
@@ -35,12 +35,12 @@ jobs:
     - name: Clean and Install Dependencies
       run: npm ci
 
-    - name: Install Headfull puppeteer
-      uses: mujo-code/puppeteer-headful@master
+#    - name: Install Headfull puppeteer
+#      uses: mujo-code/puppeteer-headful@master
 
     - name: Witness tests
-      env:
-        PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'false'
+#      env:
+#        PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'false'
       run: |
         npm run build --if-present
         npm test
