--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,8 +35,8 @@ jobs:
     - name: Clean and Install Dependencies
       run: npm ci
 
-#    - name: Install Headfull puppeteer
-#      uses: mujo-code/puppeteer-headful@master
+    - name: Install Headfull puppeteer
+      uses: mujo-code/puppeteer-headful@master
 
     - name: Witness tests
 #      env:
