--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,11 @@ jobs:
       CI: 'true'
 
     steps:
+    - name: Install Headfull puppeteer
+      uses: mujo-code/puppeteer-headful@0bc4f88
+      with:
+        args: npm test
+
     - name: Check out the code
       uses: actions/checkout@v2
 
@@ -32,16 +37,14 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Clean and Install Dependencies
-      run: npm ci
-
-    - name: Install Headfull puppeteer
-      uses: mujo-code/puppeteer-headful@master
+#    - name: Clean and Install Dependencies
+#      run: npm ci
 
     - name: Witness tests
 #      env:
 #        PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'false'
       run: |
+        npm install
         npm run build --if-present
         npm test
 
