--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,18 +24,19 @@ jobs:
       CI: 'true'
 
     steps:
-    - name: Install Headfull puppeteer
-      uses: mujo-code/puppeteer-headful@0bc4f88
-      with:
-        args: npm test
-
-    - name: Check out the code
-      uses: actions/checkout@v2
-
     - name: Install node v${{ matrix.node-version }}
       uses: actions/setup-node@v2-beta
       with:
         node-version: ${{ matrix.node-version }}
+
+    - name: Install Headfull puppeteer
+      uses: mujo-code/puppeteer-headful@0bc4f88
+      with:
+        args: ['npm test']
+
+    - name: Check out the code
+      uses: actions/checkout@v2
+
 
 #    - name: Clean and Install Dependencies
 #      run: npm ci
