--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install Headfull puppeteer
       uses: mujo-code/puppeteer-headful@0bc4f88
       with:
-        args: ['npm test']
+        args: npm test
 
     - name: Check out the code
       uses: actions/checkout@v2
