So it's hard to test code that isn't there....

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,9 @@ jobs:
       CI: 'true'
 
     steps:
+    - name: Check out Witness code
+      uses: actions/checkout@v2
+
     - name: Install node v${{ matrix.node-version }}
       uses: actions/setup-node@v2-beta
       with:
