--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,14 +34,13 @@ jobs:
 
     - name: Witness setup
       run: npm install 
+      env:
+        PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
 
     - name: Install Headfull puppeteer
       uses: mujo-code/puppeteer-headful@0bc4f88
       with:
         args: npm test
-
-    - name: Check out the code
-      uses: actions/checkout@v2
 
 
 #    - name: Clean and Install Dependencies
