--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,8 @@ jobs:
         PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
 
     - name: Install Headfull puppeteer
-      uses: mujo-code/puppeteer-headful@0bc4f88
+      uses: djp3/puppeteer-headful@master
+      #uses: mujo-code/puppeteer-headful@0bc4f88
       with:
         args: npm test
 
