--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bufferutil": "^4.0.1",
     "build": "^0.1.4",
     "js-yaml": "^3.13.1",
+    "puppeteer": "^3.1.0",
     "test": "^0.6.0",
     "utf-8-validate": "^5.0.2"
   },
