--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "witness_chrome_extension",
   "version": "0.0.3",
   "description": "Witness This Media Chrome Extension",
-  "main": "lighthouserc.js",
   "scripts": {
     "test": "mocha chrome_test/test_001.js"
   },
@@ -16,16 +15,15 @@
     "url": "https://github.com/djp3/witness_chrome_extension/issues"
   },
   "homepage": "https://github.com/djp3/witness_chrome_extension#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "assert": "^2.0.0",
     "bufferutil": "^4.0.1",
     "build": "^0.1.4",
-    "js-yaml": "^3.13.1",
+    "js-yaml": "^3.14.0",
+    "mocha": "^7.1.2",
     "puppeteer": "^3.1.0",
     "test": "^0.6.0",
     "utf-8-validate": "^5.0.2"
-  },
-  "devDependencies": {
-    "mocha": "^7.1.2"
   }
 }
